# opendrift-leeway-webgui

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  Pipfile  README.md  pyproject.toml  setup.py
.github/workflows/: deployment.yml  linting.yml  tests.yml
django_leeway/core/: asgi.py  settings.py
django_leeway/leeway/: apps.py  celery.py  forms.py  models.py  tasks.py  utils.py  views.py
django_leeway/leeway/migrations/: 0002_auto_20221205_1342.py  0006_leewaysimulation_radius.py
django_leeway/leeway/templates/: base.html  leeway-simulation.html
django_leeway/leeway/templates/registration/: login.html
example-config/: apache2.conf  leeway-celery.service  leeway-celery@.service  opendrift-leeway-webgui.ini
opendrift/: Dockerfile
opendrift_leeway/core/: asgi.py  settings.py  urls.py  wsgi.py
opendrift_leeway/leeway/: admin.py  apps.py  celery.py  forms.py  models.py  tasks.py  utils.py  views.py
opendrift_leeway/leeway/migrations/: 0001_initial.py  0003_leewaysimulation_user.py  0004_leewaysimulation_simulation_finished.py
opendrift_leeway/leeway/templates/registration/: login.html
opendrift_leeway_webgui/: celerybeat-schedule-shm  celerybeat-schedule-wal  download_merge_icon_eu.py  manage.py  simulation.py
opendrift_leeway_webgui/api/: apps.py  urls.py
opendrift_leeway_webgui/api/v1/: __init__.py  serializers.py  urls.py  views.py
opendrift_leeway_webgui/core/: asgi.py  logging_formatter.py  settings.py  urls.py  utils.py  wsgi.py
opendrift_leeway_webgui/leeway/: admin.py  apps.py  celery.py  forms.py  models.py  tasks.py  urls.py  utils.py  views.py
opendrift_leeway_webgui/leeway/migrations/: 0001_initial.py  0002_auto_20221205_1342.py  0003_leewaysimulation_user.py  0004_leewaysimulation_simulation_finished.py  0005_leewaysimulation_uuid.py  0006_leewaysimulation_radius.py  0007_leewaysimulation_add_file_fields.py  0008_leewaysimulation_traceback.py  0009_leewaysimulation_geojson.py  0009_leewaysimulation_send_animation_sea_and_more.py  0010_leewaysimulation_name.py  0011_invitationtoken.py  0012_webhook.py  0013_iconfiles.py
opendrift_leeway_webgui/leeway/static/css/: style.css
opendrift_leeway_webgui/leeway/templates/: base.html  leeway-simulation.html  simulation-form.html  simulations-list.html
opendrift_leeway_webgui/leeway/templates/leeway/: leewaysimulation_confirm_delete.html  leewaysimulation_detail.html  leewaysimulation_documentation.html  leewaysimulation_form.html  leewaysimulation_list.html  webhook_confirm_delete.html  webhook_list.html
opendrift_leeway_webgui/leeway/templates/registration/: login.html  register.html
opendrift_leeway_webgui/simulation/: simulation.py
simulation/: simulation.py
tests/: __init__.py  conftest.py
tests/leeway/: __init__.py  test_simulation.py
