[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "opendrift-leeway-webgui"
description = "Web GUI for Leeway simulations with OpenDrift"
version = "2022.12.0"
readme = "README.md"
requires-python = ">=3.7"
keywords = ["OpenDrift", "Leeway", "SAR", "Search", "Rescue", "Simulation", "Drift"]
license = {text = "Apache2 2.0 License"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: Django",
    "Framework :: Django :: 4",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "celery",
    "django>=4.1",
    "dms2dec",
    "redis",
]

[project.optional-dependencies]
dev = ["bumpver", "pre-commit"]

[tool.setuptools.packages.find]
include = ["opendrift_leeway_webgui*"]

[tool.bumpver]
current_version = "2022.12.0"
version_pattern = "YYYY.MM.INC0[-TAG]"
commit_message = "Bump version to {new_version}"
commit = true
tag = true
push = true

[tool.bumpver.file_patterns]
"pyproject.toml" = [
    'current_version = "{version}"',
    'version = "{version}"',
]

[tool.isort]
known_first_party = "opendrift_leeway_webgui"
include_trailing_comma = true
line_length            = 88
multi_line_output      = 3
