[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "opendrift-leeway-webgui"
description = "Web GUI for Leeway simulations with OpenDrift"
version = "2022.12.0"
readme = "README.md"
requires-python = ">=3.8"
keywords = ["OpenDrift", "Leeway", "SAR", "Search", "Rescue", "Simulation", "Drift"]
license = {text = "Apache2 2.0 License"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: Django",
    "Framework :: Django :: 4",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "celery",
    "django>=4.1",
    "dms2dec",
    "redis",
]

[project.urls]
"Homepage" = "https://leeway.tuerantuer.org"
"Bug Tracker" = "https://github.com/digitalfabrik/opendrift-leeway-webgui/issues"
"Source Code" = "https://github.com/digitalfabrik/opendrift-leeway-webgui"

[project.optional-dependencies]
dev = [
    "bumpver",
    "pre-commit",
    "pylint",
    "pylint-django",
]

[tool.setuptools.packages.find]
include = ["opendrift_leeway_webgui*"]

[tool.black]
    skip-magic-trailing-comma = true

[tool.bumpver]
current_version = "2022.12.0"
version_pattern = "YYYY.MM.INC0[-TAG]"
commit_message = "Bump version to {new_version}"
commit = true
tag = true
push = true

[tool.bumpver.file_patterns]
"pyproject.toml" = [
    'current_version = "{version}"',
    'version = "{version}"',
]

[tool.djlint]
profile="django"

[tool.isort]
known_first_party = "opendrift_leeway_webgui"
include_trailing_comma = true
line_length            = 88
multi_line_output      = 3

[tool.pylint.main]
jobs = 0
load-plugins = [
    "pylint_django",
    "pylint.extensions.emptystring",
    "pylint.extensions.comparetozero",
    "pylint.extensions.comparison_placement",
    "pylint.extensions.for_any_all",
    "pylint.extensions.consider_ternary_expression",
]
django-settings-module="opendrift_leeway_webgui.core.settings"

[tool.pylint.messages_control]
disable = [
  "missing-module-docstring",
]
enable = ["useless-suppression"]

[tool.pylint.format]
max-line-length = 120

[tool.pylint.reports]
output-format = "colorized"
