[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "opendrift-leeway-webgui"
description = "Web GUI for Leeway simulations with OpenDrift"
version = "2026.3.0"
readme = "README.md"
requires-python = ">=3.8"
keywords = ["OpenDrift", "Leeway", "SAR", "Search", "Rescue", "Simulation", "Drift"]
license = {text = "Apache2 2.0 License"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: Django",
    "Framework :: Django :: 4",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "cfgrib",
    "celery",
    "dask",
    "django>=4.1",
    "djangorestframework",
    "django-rest-knox",
    "dms2dec",
    "drf-spectacular",
    "netCDF4",
    "numpy",
    "redis",
    "requests",
    "uvicorn",
    "gunicorn",
    "xarray",
]

[project.urls]
"Homepage" = "https://leeway.tuerantuer.org"
"Bug Tracker" = "https://github.com/digitalfabrik/opendrift-leeway-webgui/issues"
"Source Code" = "https://github.com/digitalfabrik/opendrift-leeway-webgui"

[project.optional-dependencies]
dev = [
    "bumpver",
    "pre-commit",
    "matplotlib",
    "pytest",
    "pytest-cov",
    "pytest-django",
    "pytest-env",
    "ruff",
]

[tool.setuptools.packages.find]
include = ["opendrift_leeway_webgui*"]

[tool.setuptools.package-data]
opendrift_leeway_webgui = [
    "**/templates/**/*.html",
    "**/static/**/*",
]

[tool.ruff]
line-length = 120
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "C90"]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["opendrift_leeway_webgui"]

[tool.bumpver]
current_version = "2024.1.0"
version_pattern = "YYYY.MM.INC0[-TAG]"
commit_message = "Bump version to {new_version}"
commit = true
tag = true
push = true

[tool.bumpver.file_patterns]
"pyproject.toml" = [
    'current_version = "{version}"',
    'version = "{version}"',
]

[tool.djlint]
profile="django"

[tool.pytest.ini_options]
addopts = [
    "--quiet",
    "--cov=opendrift_leeway_webgui",
    "--cov-report=html",
    "--disable-warnings",
]
testpaths = [
    "tests",
]
DJANGO_SETTINGS_MODULE = "opendrift_leeway_webgui.core.settings"
env = [
    "LEEWAY_SECRET_KEY=dummy"
]
